Update project configuration: Rename iml file, enhance `pom.xml`, and update `.gitignore`